--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,12 @@
+# Bcrypt
+secure.salt="abcd1234"
+
+# Messaging
 play.i18n.langs = [ "en-AU" ]
 
 # Default database configuration
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+db.default.url="jdbc:h2:mem:play"
+
+# Ebean namespaces
+ebean.default="models.*"
