--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -3,6 +3,7 @@
     username:   admin
     password:   $2a$10$6qcM9wmSFGeiTN2hwhIE5OJ0emrAOf1juJx8TA7oywQDvEdS6Wn4K
     banned:     false
+    admin:      true
     lastAction: 2015-07-01
 
 - &test1 !!models.User
@@ -10,6 +11,7 @@
     username:   test
     password:   $2a$10$6qcM9wmSFGeiTN2hwhIE5OJ0emrAOf1juJx8TA7oywQDvEdS6Wn4K
     banned:     false
+    admin:      false
     lastAction: 2015-07-01
 
 - &hw !!models.BonMot
