--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,3 +13,8 @@ db.default.url="jdbc:h2:mem:play"
 
 # Ebean namespaces
 ebean.default="models.*"
+
+# Mongo
+app.mongodb.name=comp391_jnagy
+app.mongodb.host=localhost
+app.mongodb.port=27017
